Deactivating multiple embargoes should offer file visibility options. Fixes absolute/issues#220

--- a/app/assets/stylesheets/worthwhile/modules/embargoes.css.scss
+++ b/app/assets/stylesheets/worthwhile/modules/embargoes.css.scss
@@ -6,4 +6,10 @@
     padding-right: 8px;
     padding-left: 8px;
   }
+
+  .extra-embargo-info {
+    td {
+      border-top: none;
+    }
+  }
 }
